--- a/projects/hono-openai-client/src/stream.html
+++ b/projects/hono-openai-client/src/stream.html
@@ -6,7 +6,7 @@
   <body>
     <div class="container mx-auto px-4">
       <div class="py-4">
-        <a href="/" class="underline text-blue-500"> ルート </a>
+        <a href="/" class="underline text-blue-500"> サンプル </a>
         <span class="px-2">></span>
         <span>ストリーム版</span>
       </div>
