feat: default message

--- a/projects/hono-mcp-client-minimum/src/index.html
+++ b/projects/hono-mcp-client-minimum/src/index.html
@@ -22,14 +22,9 @@
           <!-- 例: メッセージ -->
           <div class="mb-2 flex items-start">
             <div class="bg-gray-200 rounded-lg px-3 py-2 max-w-xs">
-              <p class="text-sm">こんにちは！</p>
-            </div>
-          </div>
-          <div class="mb-2 flex justify-end items-start">
-            <div
-              class="bg-blue-500 text-white rounded-lg px-3 py-2 max-w-xs ml-auto"
-            >
-              <p class="text-sm">こんにちは、お元気ですか？</p>
+              <p class="text-sm">
+                私はAIエージェントです。何かご用はありますか？😊
+              </p>
             </div>
           </div>
         </div>
