--- a/projects/edit-vid/index.html
+++ b/projects/edit-vid/index.html
@@ -105,6 +105,19 @@
             position: sticky;
             top: 0;
         }
+        #clear-video-btn {
+            background-color: #f44336;
+            color: white;
+            border: none;
+            padding: 10px 15px;
+            border-radius: 5px;
+            cursor: pointer;
+            width: 100%;
+            font-size: 16px;
+        }
+        #clear-video-btn:hover {
+            background-color: #d32f2f;
+        }
     </style>
 </head>
 <body>
@@ -125,7 +138,7 @@
                 </div>
                 <div id="actions-container">
                     <h2>アクション</h2>
-                    <!-- アクションボタンなどをここに追加 -->
+                    <button id="clear-video-btn">ビデオをクリア</button>
                 </div>
             </div>
             <div id="timeline-container">
@@ -152,6 +165,7 @@
         const editorContainer = document.getElementById('editor-container');
         const videoPlayer = document.getElementById('video-player');
         const mainElement = document.querySelector('main');
+        const clearVideoButton = document.getElementById('clear-video-btn');
 
         // ファイル選択ダイアログを開く
         dropZone.addEventListener('click', () => {
@@ -194,6 +208,22 @@
             }
         });
 
+        // ビデオをクリア
+        clearVideoButton.addEventListener('click', () => {
+            if (confirm('ビデオをクリアしてもよろしいですか？')) {
+                videoPlayer.pause();
+                URL.revokeObjectURL(videoPlayer.src);
+                videoPlayer.removeAttribute('src');
+                fileInput.value = ''; // 同じファイルを再度選択できるようにする
+
+                // レイアウトを初期状態に戻す
+                editorContainer.style.display = 'none';
+                dropZone.style.display = 'flex';
+                mainElement.style.alignItems = 'center';
+                mainElement.style.justifyContent = 'center';
+            }
+        });
+
         // ファイルを処理してエディタを表示
         function handleFile(file) {
             const fileURL = URL.createObjectURL(file);
@@ -205,8 +235,8 @@
             mainElement.style.alignItems = 'stretch';
             mainElement.style.justifyContent = 'flex-start';
 
-
-            videoPlayer.play();
+            videoPlayer.load(); // ビデオをロード
+            videoPlayer.play().catch(e => console.error("Video play failed:", e));
         }
     </script>
 </body>
