--- a/projects/edit-vid/index.html
+++ b/projects/edit-vid/index.html
@@ -82,6 +82,8 @@
             border-radius: 10px;
             padding: 20px;
             background-color: #fff;
+            display: flex;
+            flex-direction: column;
         }
         #timeline-container {
             margin-top: 20px;
@@ -105,6 +107,48 @@
             position: sticky;
             top: 0;
         }
+
+        /* Action Styles */
+        #add-subtitle-container {
+            margin-bottom: 20px;
+        }
+        #add-subtitle-container h3 {
+            margin-top: 0;
+            margin-bottom: 10px;
+            font-size: 18px;
+        }
+        #add-subtitle-container label {
+            display: block;
+            margin-top: 10px;
+            margin-bottom: 5px;
+            font-weight: bold;
+        }
+        #add-subtitle-container input {
+            width: 100%;
+            padding: 8px;
+            box-sizing: border-box;
+            border-radius: 4px;
+            border: 1px solid #ccc;
+        }
+        #add-subtitle-btn {
+            background-color: #4CAF50; /* Green */
+            color: white;
+            border: none;
+            padding: 10px 15px;
+            border-radius: 5px;
+            cursor: pointer;
+            width: 100%;
+            font-size: 16px;
+            margin-top: 15px;
+        }
+        #add-subtitle-btn:hover {
+            background-color: #45a049;
+        }
+        #actions-container hr {
+            margin: 20px 0;
+            border: 0;
+            border-top: 1px solid #ccc;
+        }
         #clear-video-btn {
             background-color: #f44336;
             color: white;
@@ -114,6 +158,7 @@
             cursor: pointer;
             width: 100%;
             font-size: 16px;
+            margin-top: auto; /* ボタンをコンテナの下部に配置 */
         }
         #clear-video-btn:hover {
             background-color: #d32f2f;
@@ -137,7 +182,18 @@
                     <video id="video-player" controls></video>
                 </div>
                 <div id="actions-container">
-                    <h2>アクション</h2>
+                    <div>
+                        <h2>アクション</h2>
+                        <div id="add-subtitle-container">
+                            <h3>テロップ追加</h3>
+                            <label for="subtitle-text">テキスト:</label>
+                            <input type="text" id="subtitle-text" placeholder="表示するテキスト">
+                            <label for="subtitle-duration">表示時間 (秒):</label>
+                            <input type="number" id="subtitle-duration" min="0.1" step="0.1" placeholder="例: 2.5">
+                            <button id="add-subtitle-btn">追加</button>
+                        </div>
+                    </div>
+                    <hr>
                     <button id="clear-video-btn">ビデオをクリア</button>
                 </div>
             </div>
@@ -167,6 +223,11 @@
         const mainElement = document.querySelector('main');
         const clearVideoButton = document.getElementById('clear-video-btn');
         const storageKey = 'lastUploadedVideoUrl';
+
+        // テロップ追加UI
+        const subtitleTextInput = document.getElementById('subtitle-text');
+        const subtitleDurationInput = document.getElementById('subtitle-duration');
+        const addSubtitleBtn = document.getElementById('add-subtitle-btn');
 
         // --- 初期化処理 ---
         document.addEventListener('DOMContentLoaded', () => {
@@ -202,6 +263,37 @@
                 clearVideo();
             }
         });
+
+        // テロップのテキスト入力に応じて表示時間を自動計算
+        subtitleTextInput.addEventListener('input', (e) => {
+            const text = e.target.value;
+            // 4文字/秒を基準とし、最低0.5秒とする。結果は小数点第一位まで。
+            const duration = Math.max(0.5, (text.length / 4)).toFixed(1);
+            subtitleDurationInput.value = duration;
+        });
+
+        // テロップ追加ボタンの処理
+        addSubtitleBtn.addEventListener('click', () => {
+            const text = subtitleTextInput.value.trim();
+            const duration = parseFloat(subtitleDurationInput.value);
+
+            if (!text) {
+                alert('テロップのテキストを入力してください。');
+                return;
+            }
+            if (isNaN(duration) || duration <= 0) {
+                alert('有効な表示時間を入力してください。');
+                return;
+            }
+
+            console.log('追加されたテロップ:', { text, duration });
+            // TODO: タイムラインにテロップを追加する処理を実装
+
+            // 入力値をクリア
+            subtitleTextInput.value = '';
+            subtitleDurationInput.value = '';
+        });
+
 
         // --- 関数 ---
         function handleFileSelect(file) {
