--- a/projects/edit-vid/index.html
+++ b/projects/edit-vid/index.html
@@ -164,6 +164,93 @@
       #clear-video-btn:hover {
         background-color: #d32f2f;
       }
+      /* Modal Styles */
+      .modal {
+        display: none;
+        position: fixed;
+        z-index: 20;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: rgba(0, 0, 0, 0.4);
+      }
+      .modal-content {
+        background-color: #fefefe;
+        margin: 15% auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 80%;
+        max-width: 500px;
+        border-radius: 10px;
+        position: relative;
+      }
+      .close-btn {
+        color: #aaa;
+        float: right;
+        font-size: 28px;
+        font-weight: bold;
+        position: absolute;
+        top: 10px;
+        right: 20px;
+      }
+      .close-btn:hover,
+      .close-btn:focus {
+        color: black;
+        text-decoration: none;
+        cursor: pointer;
+      }
+      #edit-dialog label {
+        display: block;
+        margin-top: 10px;
+        margin-bottom: 5px;
+        font-weight: bold;
+      }
+      #edit-dialog input {
+        width: 100%;
+        padding: 8px;
+        box-sizing: border-box;
+        border-radius: 4px;
+        border: 1px solid #ccc;
+      }
+      #save-edit-btn {
+        background-color: #4caf50;
+        color: white;
+        border: none;
+        padding: 10px 15px;
+        border-radius: 5px;
+        cursor: pointer;
+        width: 100%;
+        font-size: 16px;
+        margin-top: 15px;
+      }
+      #save-edit-btn:hover {
+        background-color: #45a049;
+      }
+      /* Timeline Button Styles */
+      #timeline-table .edit-btn,
+      #timeline-table .delete-btn {
+        padding: 5px 10px;
+        border-radius: 4px;
+        border: none;
+        cursor: pointer;
+        font-size: 12px;
+        color: white;
+        margin: 0 2px;
+      }
+      #timeline-table .edit-btn {
+        background-color: #2196f3; /* Blue */
+      }
+      #timeline-table .edit-btn:hover {
+        background-color: #0b7dda;
+      }
+      #timeline-table .delete-btn {
+        background-color: #f44336; /* Red */
+      }
+      #timeline-table .delete-btn:hover {
+        background-color: #d32f2f;
+      }
     </style>
   </head>
   <body>
@@ -234,6 +321,29 @@
       </div>
     </main>
 
+    <div id="edit-dialog" class="modal">
+      <div class="modal-content">
+        <span class="close-btn">&times;</span>
+        <h3>テロップ編集</h3>
+        <input type="hidden" id="edit-subtitle-id" />
+        <label for="edit-subtitle-text">テキスト:</label>
+        <input
+          type="text"
+          id="edit-subtitle-text"
+          placeholder="表示するテキスト"
+        />
+        <label for="edit-subtitle-duration">表示時間 (秒):</label>
+        <input
+          type="number"
+          id="edit-subtitle-duration"
+          min="0.1"
+          step="0.1"
+          placeholder="例: 2.5"
+        />
+        <button id="save-edit-btn">保存</button>
+      </div>
+    </div>
+
     <script>
       const dropZone = document.getElementById("drop-zone");
       const fileInput = document.getElementById("file-input");
@@ -250,6 +360,17 @@
         document.getElementById("subtitle-duration");
       const addSubtitleBtn = document.getElementById("add-subtitle-btn");
       const timelineTableBody = document.querySelector("#timeline-table tbody");
+
+      // 編集ダイアログUI
+      const editDialog = document.getElementById("edit-dialog");
+      const closeBtn = editDialog.querySelector(".close-btn");
+      const saveEditBtn = document.getElementById("save-edit-btn");
+      const editSubtitleIdInput = document.getElementById("edit-subtitle-id");
+      const editSubtitleTextInput =
+        document.getElementById("edit-subtitle-text");
+      const editSubtitleDurationInput = document.getElementById(
+        "edit-subtitle-duration"
+      );
 
       // --- 初期化処理 ---
       document.addEventListener("DOMContentLoaded", () => {
@@ -323,6 +444,37 @@
 
         subtitleTextInput.value = "";
         subtitleDurationInput.value = "";
+      });
+
+      // タイムラインのボタンに対するイベントリスナー（イベント委任）
+      timelineTableBody.addEventListener("click", (e) => {
+        const target = e.target;
+        const row = target.closest("tr");
+        if (!row) return;
+        const subId = row.dataset.id;
+
+        if (target.classList.contains("edit-btn")) {
+          openEditDialog(subId);
+        } else if (target.classList.contains("delete-btn")) {
+          handleDeleteSubtitle(subId);
+        }
+      });
+
+      // 編集ダイアログのイベントリスナー
+      closeBtn.addEventListener("click", () => {
+        editDialog.style.display = "none";
+      });
+      saveEditBtn.addEventListener("click", handleSaveEdit);
+      window.addEventListener("click", (e) => {
+        if (e.target == editDialog) {
+          editDialog.style.display = "none";
+        }
+      });
+
+      editSubtitleTextInput.addEventListener("input", (e) => {
+        const text = e.target.value;
+        const duration = Math.max(0.5, text.length / 4).toFixed(1);
+        editSubtitleDurationInput.value = duration;
       });
 
       // --- 関数 ---
@@ -447,6 +599,7 @@
 
       function renderTimeline(subtitles) {
         timelineTableBody.innerHTML = ""; // 既存の行をクリア
+        if (!subtitles) return;
         subtitles.forEach((sub) => {
           const row = timelineTableBody.insertRow();
           row.setAttribute("data-id", sub.id);
@@ -455,18 +608,89 @@
                     <td>${sub.endTime.toFixed(2)}</td>
                     <td>${escapeHTML(sub.text)}</td>
                     <td>${sub.duration.toFixed(1)}</td>
-                    <td></td>
+                    <td>
+                        <button class="edit-btn">編集</button>
+                        <button class="delete-btn">削除</button>
+                    </td>
                 `;
         });
+      }
+
+      function handleDeleteSubtitle(id) {
+        if (confirm("このテロップを削除してもよろしいですか？")) {
+          const videoUrl = localStorage.getItem(videoStorageKey);
+          if (!videoUrl) return;
+          const filename = videoUrl.split("/").pop();
+          const subtitles = loadSubtitles(filename);
+          const updatedSubtitles = subtitles.filter(
+            (sub) => String(sub.id) !== String(id)
+          );
+          saveSubtitles(filename, updatedSubtitles);
+          renderTimeline(updatedSubtitles);
+        }
+      }
+
+      function openEditDialog(id) {
+        const videoUrl = localStorage.getItem(videoStorageKey);
+        if (!videoUrl) return;
+        const filename = videoUrl.split("/").pop();
+        const subtitles = loadSubtitles(filename);
+        const subtitleToEdit = subtitles.find(
+          (sub) => String(sub.id) === String(id)
+        );
+
+        if (subtitleToEdit) {
+          editSubtitleIdInput.value = subtitleToEdit.id;
+          editSubtitleTextInput.value = subtitleToEdit.text;
+          editSubtitleDurationInput.value = subtitleToEdit.duration;
+          editDialog.style.display = "block";
+        }
+      }
+
+      function handleSaveEdit() {
+        const id = editSubtitleIdInput.value;
+        const newText = editSubtitleTextInput.value.trim();
+        const newDuration = parseFloat(editSubtitleDurationInput.value);
+
+        if (!newText) {
+          alert("テロップのテキストを入力してください。");
+          return;
+        }
+        if (isNaN(newDuration) || newDuration <= 0) {
+          alert("有効な表示時間を入力してください。");
+          return;
+        }
+
+        const videoUrl = localStorage.getItem(videoStorageKey);
+        if (!videoUrl) return;
+        const filename = videoUrl.split("/").pop();
+        const subtitles = loadSubtitles(filename);
+
+        const subtitleIndex = subtitles.findIndex(
+          (sub) => String(sub.id) === String(id)
+        );
+        if (subtitleIndex > -1) {
+          subtitles[subtitleIndex].text = newText;
+          subtitles[subtitleIndex].duration = newDuration;
+          // 開始時間はそのままに、終了時間を更新
+          subtitles[subtitleIndex].endTime =
+            subtitles[subtitleIndex].startTime + newDuration;
+
+          saveSubtitles(filename, subtitles);
+          renderTimeline(subtitles);
+          editDialog.style.display = "none";
+        } else {
+          alert("編集対象のテロップが見つかりませんでした。");
+        }
       }
 
       function escapeHTML(str) {
         return str.replace(new RegExp("[&<>'\"/]", "g"), function (match) {
           return {
-            "&": "&",
-            "<": "<",
-            ">": ">",
-            '"': '"',
+            "&": "&amp;",
+            "<": "&lt;",
+            ">": "&gt;",
+            '"': "&quot;",
             "'": "&#39;",
             "/": "&#x2F;",
           }[match];
