style: Remove top margin from h2 in actions container

--- a/projects/edit-vid/index.html
+++ b/projects/edit-vid/index.html
@@ -164,6 +164,9 @@
       #clear-video-btn:hover {
         background-color: #d32f2f;
       }
+      #actions-container h2 {
+        margin-top: 0;
+      }
       /* Modal Styles */
       .modal {
         display: none;
