style: Update button colors for better visual consistency

--- a/projects/edit-vid/index.html
+++ b/projects/edit-vid/index.html
@@ -218,7 +218,7 @@
         border: 1px solid #ccc;
       }
       #save-edit-btn {
-        background-color: #4caf50;
+        background-color: #4caf50; /* Green */
         color: white;
         border: none;
         padding: 10px 15px;
@@ -244,10 +244,10 @@
         margin: 0 2px;
       }
       #timeline-table .edit-btn {
-        background-color: #2196f3; /* Blue */
+        background-color: #4caf50; /* Green */
       }
       #timeline-table .edit-btn:hover {
-        background-color: #0b7dda;
+        background-color: #45a049;
       }
       #timeline-table .delete-btn {
         background-color: #f44336; /* Red */
@@ -256,7 +256,7 @@
         background-color: #d32f2f;
       }
       #timeline-table .preview-btn {
-        background-color: #616161; /* Dark Grey */
+        background-color: #2196f3; /* Blue */
       }
       #timeline-table .preview-btn:hover {
         background-color: #424242;
