feat: Add overflow and box-sizing to video editor container

--- a/projects/edit-vid/index.html
+++ b/projects/edit-vid/index.html
@@ -87,6 +87,8 @@
         background-color: #fff;
         display: flex;
         flex-direction: column;
+        overflow-y: auto; /* 縦スクロールを有効にする */
+        box-sizing: border-box; /* パディングをサイズに含める */
       }
       #timeline-container {
         margin-top: 20px;
